--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,8 +1,8 @@
 ADD_EXECUTABLE(solv solv.c)
 IF ( DEBIAN )
-TARGET_LINK_LIBRARIES(solv satsolverext satsolver ${EXPAT_LIBRARY} ${ZLIB_LIBRARY})
+TARGET_LINK_LIBRARIES(solv libsolvext libsolv ${EXPAT_LIBRARY} ${ZLIB_LIBRARY})
 ELSE ( DEBIAN )
-TARGET_LINK_LIBRARIES(solv satsolverext satsolver ${RPMDB_LIBRARY} ${EXPAT_LIBRARY} ${ZLIB_LIBRARY})
+TARGET_LINK_LIBRARIES(solv libsolvext libsolv ${RPMDB_LIBRARY} ${EXPAT_LIBRARY} ${ZLIB_LIBRARY})
 ENDIF ( DEBIAN )
 
 install(TARGETS
