--- a/src/satversion.h.in
+++ b/src/satversion.h.in
@@ -10,14 +10,14 @@
  * 
  */
 
-#ifndef SATSOLVER_SATVERSION_H
-#define SATSOLVER_SATVERSION_H
+#ifndef LIBSOLV_SATVERSION_H
+#define LIBSOLV_SATVERSION_H
 
-#define SATSOLVER_VERSION_STRING "@VERSION@"
-#define SATSOLVER_VERSION_MAJOR @LIBSATSOLVER_MAJOR@
-#define SATSOLVER_VERSION_MINOR @LIBSATSOLVER_MINOR@
-#define SATSOLVER_VERSION_PATCH @LIBSATSOLVER_PATCH@
-#define SATSOLVER_VERSION (SATSOLVER_VERSION_MAJOR * 10000 + SATSOLVER_VERSION_MINOR * 100 + SATSOLVER_VERSION_PATCH)
+#define LIBSOLV_VERSION_STRING "@VERSION@"
+#define LIBSOLV_VERSION_MAJOR @LIBSOLV_MAJOR@
+#define LIBSOLV_VERSION_MINOR @LIBSOLV_MINOR@
+#define LIBSOLV_VERSION_PATCH @LIBSOLV_PATCH@
+#define LIBSOLV_VERSION (LIBSOLV_VERSION_MAJOR * 10000 + LIBSOLV_VERSION_MINOR * 100 + LIBSOLV_VERSION_PATCH)
 
 extern const char sat_version[];
 extern int sat_version_major;
