- add ver files, fix build

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,10 +1,10 @@
-ADD_EXECUTABLE(solv solv.c)
-IF ( DEBIAN )
-TARGET_LINK_LIBRARIES(solv libsolvext libsolv ${EXPAT_LIBRARY} ${ZLIB_LIBRARY})
-ELSE ( DEBIAN )
-TARGET_LINK_LIBRARIES(solv libsolvext libsolv ${RPMDB_LIBRARY} ${EXPAT_LIBRARY} ${ZLIB_LIBRARY})
-ENDIF ( DEBIAN )
+ADD_EXECUTABLE (solv solv.c)
+IF (DEBIAN)
+TARGET_LINK_LIBRARIES (solv libsolvext libsolv ${EXPAT_LIBRARY} ${ZLIB_LIBRARY})
+ELSE (DEBIAN)
+TARGET_LINK_LIBRARIES (solv libsolvext libsolv ${RPMDB_LIBRARY} ${EXPAT_LIBRARY} ${ZLIB_LIBRARY})
+ENDIF (DEBIAN)
 
-install(TARGETS
+INSTALL(TARGETS
     solv
     DESTINATION ${BIN_INSTALL_DIR})
