--- a/src/solvversion.h.in
+++ b/src/solvversion.h.in
@@ -6,12 +6,12 @@
  */
 
 /*
- * satversion.h
+ * solvversion.h
  * 
  */
 
-#ifndef LIBSOLV_SATVERSION_H
-#define LIBSOLV_SATVERSION_H
+#ifndef LIBSOLV_SOLVVERSION_H
+#define LIBSOLV_SOLVVERSION_H
 
 #define LIBSOLV_VERSION_STRING "@VERSION@"
 #define LIBSOLV_VERSION_MAJOR @LIBSOLV_MAJOR@
@@ -19,9 +19,9 @@
 #define LIBSOLV_VERSION_PATCH @LIBSOLV_PATCH@
 #define LIBSOLV_VERSION (LIBSOLV_VERSION_MAJOR * 10000 + LIBSOLV_VERSION_MINOR * 100 + LIBSOLV_VERSION_PATCH)
 
-extern const char sat_version[];
-extern int sat_version_major;
-extern int sat_version_minor;
-extern int sat_version_patch;
+extern const char solv_version[];
+extern int solv_version_major;
+extern int solv_version_minor;
+extern int solv_version_patch;
 
 #endif
