- add support for bindings creation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,10 @@ CMAKE_MINIMUM_REQUIRED (VERSION 2.4)
 OPTION(ENABLE_STATIC "Build a static version of the libraries?" OFF)
 OPTION(DISABLE_SHARED "Do not build a shared version of the libraries?" OFF)
 
+OPTION(ENABLE_PERL "Build the perl bindings?" OFF)
+OPTION(ENABLE_PYTHON "Build the python bindings?" OFF)
+OPTION(ENABLE_RUBY "Build the ruby bindings?" OFF)
+
 #IF(${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERISION} GREATER 2.4)
 #ENDIF(${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERISION} GREATER 2.4)
 
@@ -182,6 +186,9 @@ set (CMAKE_C_FLAGS_DEBUG     "${CMAKE_C_FLAGS} -g3 -O0")
 ADD_SUBDIRECTORY (src)
 ADD_SUBDIRECTORY (ext)
 ADD_SUBDIRECTORY (tools)
+IF (ENABLE_PERL OR ENABLE_PYTHON OR ENABLE_RUBY)
+    ADD_SUBDIRECTORY (bindings)
+ENDIF (ENABLE_PERL OR ENABLE_PYTHON OR ENABLE_RUBY)
 ADD_SUBDIRECTORY (examples)
 
 MESSAGE (STATUS "version: ${VERSION}")
