--- a/bindings/ruby/CMakeLists.txt
+++ b/bindings/ruby/CMakeLists.txt
@@ -15,6 +15,8 @@ ADD_CUSTOM_COMMAND (
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
     DEPENDS ${CMAKE_SOURCE_DIR}/bindings/solv.i
 )
+
+ADD_DEFINITIONS(-Wno-unused)
 INCLUDE_DIRECTORIES (${RUBY_INCLUDE_PATH})
 
 ADD_LIBRARY (bindings_ruby SHARED solv_ruby.c)
