--- a/package/libsolv.spec.in
+++ b/package/libsolv.spec.in
@@ -86,6 +86,7 @@ Authors:
 Summary:        A new approach to package dependency solving
 Group:          Development/Libraries/C and C++
 Requires:       libsolv-tools = %version
+Requires:       libsolv@LIBSOLV_SOVERSION@ = %version
 Requires:       rpm-devel
 
 %description devel
@@ -179,6 +180,10 @@ export NO_BRP_STRIP_DEBUG=true
 
 %clean
 rm -rf "$RPM_BUILD_ROOT"
+
+%post -n libsolv@LIBSOLV_SOVERSION@ -p /sbin/ldconfig
+
+%postun -n libsolv@LIBSOLV_SOVERSION@ -p /sbin/ldconfig
 
 %files -n libsolv@LIBSOLV_SOVERSION@
 %defattr(-,root,root)
