- build perl bindings with -Wno-nonnull for SLE 11 SP1

--- a/bindings/perl/CMakeLists.txt
+++ b/bindings/perl/CMakeLists.txt
@@ -24,7 +24,7 @@ ADD_CUSTOM_COMMAND (
     VERBATIM
 )
 
-ADD_DEFINITIONS(${PERL_CCFLAGS} -Wno-unused)
+ADD_DEFINITIONS(${PERL_CCFLAGS} -Wno-unused -Wno-nonnull)
 LINK_DIRECTORIES (${PERL_CORE_DIR})
 INCLUDE_DIRECTORIES (${PERL_INCLUDE_PATH} ${PERL_CORE_DIR})
 
